@@ -1,3 +1,4 @@
+ - Permit interpolation of functions between non-matching meshes
  - Remove Function::Function(std::string filename)
  - Transition to new XML io
  - Remove GenericSparsityPattern::sort
